--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@mui/material-nextjs": "^5.15.11",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@types/node": "^20",
