--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.15.21",
     "@mui/material-nextjs": "^5.15.11",
     "next": "14.2.4",
+    "pino": "^9.3.1",
     "react": "^18",
     "react-dom": "^18",
     "recoil": "^0.7.7"
