--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "pino": "^9.3.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-geolocated": "^4.1.2",
     "recoil": "^0.7.7"
   },
   "devDependencies": {
