--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-geolocated": "^4.1.2",
+    "react-hook-form": "^7.52.2",
     "recoil": "^0.7.7"
   },
   "devDependencies": {
