--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@mui/icons-material": "^5.16.0",
     "@mui/material": "^5.15.21",
     "@mui/material-nextjs": "^5.15.11",
-    "next": "14.2.4",
+    "@next/third-parties": "^14.2.13",
+    "next": "14.2.13",
     "pino": "^9.3.1",
     "react": "^18",
     "react-dom": "^18",
