--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material-nextjs": "^5.15.11",
     "@next/third-parties": "^14.2.13",
     "next": "14.2.13",
+    "next-seo": "^6.6.0",
     "pino": "^9.3.1",
     "react": "^18",
     "react-dom": "^18",
